<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/bPlay"
        android:text="@string/bPlay"
        android:drawableLeft="@drawable/playbutton"
        style="@style/dashboard_button"/>

    <Button
        android:id="@+id/bScores"
        android:text="@string/bScores"
        android:drawableLeft="@drawable/rankings"
        style="@style/dashboard_button"/>

    <Button
        android:id="@+id/bSettings"
        android:text="@string/bSettings"
        android:drawableLeft="@drawable/settings"
        style="@style/dashboard_button"/>


</LinearLayout>
