<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.CreditsActivity"
    >

    <TextView
        android:id="@+id/creditsTop"
        style="@style/credits_item"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/CreditsTop"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
         />

    <TextView
        android:id="@+id/creditsAuthors"
        style="@style/credits_item"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/CreditsAuthors"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/creditsAuthor1"
        style="@style/credits_item"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/CreditsAuthor1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/creditsSubject"
        style="@style/credits_item"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/CreditsSubject"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="12sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:nestedScrollingEnabled="false"
            android:scaleType="fitXY"
            android:src="@drawable/marca_upv_principal_color" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@drawable/etsinf" />


    </LinearLayout>




</LinearLayout>
