<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="labs.sdm.practica.PlayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/PlayForAmount"
            android:id="@+id/tvPlayForAmount"
            android:layout_weight="1"
            android:gravity="start" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/QuestionNumber"
            android:id="@+id/tvQuestion"
            android:layout_weight="1"
            android:gravity="end" />

    </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/QuestionText"
            android:id="@+id/tvQuestionText"
            android:padding="20dp" />

        <Button
            android:text="@string/textAnswer1"
            android:id="@+id/bAnswer1"
            style="@style/answer_button"
            />

        <Button

            android:text="@string/textAnswer1"
            android:id="@+id/bAnswer2"
            style="@style/answer_button"
            />

        <Button

            android:text="@string/textAnswer1"
            android:id="@+id/bAnswer3"
            style="@style/answer_button"
            />

        <Button
            android:text="@string/textAnswer1"
            android:id="@+id/bAnswer4"
            style="@style/answer_button"
            />


    </LinearLayout>
</RelativeLayout>
